hw-03/answer_exercise_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
      - image: nginx:1.19.4
        name: nginx
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "128Mi"
            cpu: "20m"
        ports:
          - containerPort: 80
