hw-03/answer_exercise_1/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-tls
spec:
  tls:
  - hosts:
      - marbella.student.lasalle.nip.io
    secretName: nginx-tls
  rules:
  - host: marbella.student.lasalle.nip.io
    http:
      paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
